- Re-enabled patches.arch/x86_64-unwind-annotations.

--- a/series.conf
+++ b/series.conf
@@ -613,7 +613,7 @@
 	patches.suse/stack-unwind
 	patches.suse/revert-x86-remove-warning-and-warning_symbol-from-struct-stacktrace_ops
 	patches.suse/no-frame-pointer-select
-+jbeulich	patches.arch/x86_64-unwind-annotations
+	patches.arch/x86_64-unwind-annotations
 
         ########################################################
         # Kdump
