KVM: PPC: Assemble book3s{,_hv}_rmhandlers.S separately
When building KVM HV mode with plenty other options enabled, the build
fails. That's fixed upstream, but 3.1-rc5 doesn't have the patch yet.
So I pulled it in from the kvm tree.

--- a/series.conf
+++ b/series.conf
@@ -148,6 +148,7 @@
 	patches.arch/ppc64-xmon-dmesg-printing.patch
 	patches.arch/ppc-prom-nodisplay.patch
 	patches.fixes/ptrace-getsiginfo
+	patches.arch/ppc-kvm-fix-big-section.patch
 
         ########################################################
         # PS3
