--- a/series.conf
+++ b/series.conf
@@ -215,6 +215,12 @@
 	# Queued for 2.6.36 -> just revert after some time
 	patches.fixes/acpi_ec_sys_access_user_space_with_get_user.patch
 
+	patches.drivers/apei_allow_drivers_access_nvs_ram.patch
+
+	patches.arch/acpica_introduce_acpi_os_phys_table_override_function.patch
+	patches.arch/acpica_fix_wrongly_mapped_acpi_table_header_when_overriding_via_initrd.patch
+	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
