- Update Xen patches to 3.1-rc7 and c/s 1105. - pass PCI segment information to Xen. - ACPI: Implement overriding of arbitrary ACPI tables via initrd. - x86: allow NVS can be accessed by driver.

--- a/series.conf
+++ b/series.conf
@@ -733,10 +733,29 @@
 	patches.xen/xen3-patch-2.6.39
 	patches.xen/xen3-patch-3.0
 	patches.xen/xen3-patch-3.1-rc5
+	patches.xen/xen3-patch-3.1-rc6-rc7
+	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
+	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
+	patches.xen/xen-kconfig-compat
+	patches.xen/xen-sys-suspend
+	patches.xen/xen-ipi-per-cpu-irq
+	patches.xen/xen-virq-per-cpu-irq
+	patches.xen/xen-clockevents
+	patches.xen/xen-spinlock-poll-early
+	patches.xen/xen-pcpu-hotplug
+	patches.xen/xen-mem-hotplug
+	patches.xen/xen-swiotlb-heuristics
+	patches.xen/xen-pci-multi-segment
+	patches.xen/xen-configurable-guest-devices
+	patches.xen/xen-setup-gsi
+	patches.xen/xen-kzalloc
+	patches.xen/xen-sections
+	patches.xen/xen-unpriv-build
+	patches.xen/xen-cpufreq-report
 	patches.xen/xen-balloon-max-target
 	patches.xen/xen-blkif-protocol-fallback-hack
 	patches.xen/xen-blkback-cdrom
@@ -746,17 +765,6 @@
 	patches.xen/xen-op-packet
 	patches.xen/xen-blkfront-cdrom
 	patches.xen/xen-blkfront-hvm-no-cdrom
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-netback-nr-irqs
 	patches.xen/xen-netback-notify-multi
 	patches.xen/xen-netback-generalize
@@ -765,10 +773,6 @@
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
 	patches.xen/xen-floppy
-	patches.xen/xen-sections
-	patches.xen/xen-kzalloc
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-setup-gsi
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-no-lapic
@@ -778,7 +782,6 @@
 	patches.xen/xen-x86-per-cpu-vcpu-info
 	patches.xen/xen-x86-msr-on-pcpu
 	patches.xen/xen-x86-EFI
-	patches.xen/xen-x86-mmcfg-ACPI-reserved
 	patches.xen/xen-x86_64-pgd-pin
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
