- rpm/host-memcpy-hack.h: Hack to use older version of the memcpy symbol   in userspace programs, so that they keep working on older systems. - rpm/kernel-binary.spec.in: Pass -include   %_sourcedir/host-memcpy-hack.h to the compiler when compiling   userspace programs.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -217,6 +217,21 @@ cd linux-%srcversion
 
 cd %kernel_build_dir
 
+# Override the timestamp 'uname -v' reports with the source timestamp and
+# the commit hash.
+date=$(head -n 1 %_sourcedir/source-timestamp)
+commit=$(sed -n 's/GIT Revision: //p' %_sourcedir/source-timestamp)
+cat > .kernel-binary.spec.buildenv <<EOF
+export KBUILD_BUILD_TIMESTAMP="$(LANG=C date -d "$date") (${commit:0:7})"
+export KBUILD_VERBOSE=0
+export KBUILD_SYMTYPES=1
+export KBUILD_OVERRIDE=1
+export KBUILD_BUILD_USER=geeko
+export KBUILD_BUILD_HOST=buildhost
+export HOST_EXTRACFLAGS="-include %_sourcedir/host-memcpy-hack.h"
+EOF
+source .kernel-binary.spec.buildenv
+
 if [ -f %_sourcedir/localversion ] ; then
     cat %_sourcedir/localversion > localversion
 fi
@@ -261,19 +276,6 @@ make clean $MAKE_ARGS
 
 rm -f source
 find . ! -type d -printf '%%P\n' > %my_builddir/obj-files
-
-# Override the timestamp 'uname -v' reports with the source timestamp and
-# the commit hash.
-date=$(head -n 1 %_sourcedir/source-timestamp)
-commit=$(sed -n 's/GIT Revision: //p' %_sourcedir/source-timestamp)
-cat > .kernel-binary.spec.buildenv <<EOF
-export KBUILD_BUILD_TIMESTAMP="$(LANG=C date -d "$date") (${commit:0:7})"
-export KBUILD_VERBOSE=0
-export KBUILD_SYMTYPES=1
-export KBUILD_OVERRIDE=1
-export KBUILD_BUILD_USER=geeko
-export KBUILD_BUILD_HOST=buildhost
-EOF
 
 %build
 cd %kernel_build_dir
