--- a/series.conf
+++ b/series.conf
@@ -182,6 +182,7 @@
 
 	# Minor fixes from 3.0-3.1-rc4 not included in -stable
 	patches.fixes/mm-swap-token-makes-global-variables-to-function-local.patch
+	patches.fixes/mm-thp-minor-lock-simplification-in-__khugepaged_exit.patch
 
         ########################################################
         # IPC patches
