vmscan: clear ZONE_CONGESTED for zone with good watermark (MM fixes 3.0 to 3.1-rc4 not in -stable).

--- a/series.conf
+++ b/series.conf
@@ -186,6 +186,7 @@
 	patches.fixes/mm-remove-ZAP_BLOCK_SIZE.patch
 	patches.fixes/mm-vmscan-fix-force-scanning-small-targets-without-swap.patch
 	patches.fixes/mm-vmscan-drop-nr_force_scan-from-get_scan_count.patch
+	patches.fixes/mm-vmscan-clear-ZONE_CONGESTED-for-zone-with-good-watermark.patch
 
         ########################################################
         # IPC patches
