--- a/series.conf
+++ b/series.conf
@@ -184,6 +184,7 @@
 	patches.fixes/mm-swap-token-makes-global-variables-to-function-local.patch
 	patches.fixes/mm-thp-minor-lock-simplification-in-__khugepaged_exit.patch
 	patches.fixes/mm-remove-ZAP_BLOCK_SIZE.patch
+	patches.fixes/mm-vmscan-fix-force-scanning-small-targets-without-swap.patch
 
         ########################################################
         # IPC patches
