mm: vmscan: drop nr_force_scan[] from get_scan_count (MM fixes 3.0 to 3.1-rc4 not in -stable).

--- a/series.conf
+++ b/series.conf
@@ -185,6 +185,7 @@
 	patches.fixes/mm-thp-minor-lock-simplification-in-__khugepaged_exit.patch
 	patches.fixes/mm-remove-ZAP_BLOCK_SIZE.patch
 	patches.fixes/mm-vmscan-fix-force-scanning-small-targets-without-swap.patch
+	patches.fixes/mm-vmscan-drop-nr_force_scan-from-get_scan_count.patch
 
         ########################################################
         # IPC patches
