--- a/series.conf
+++ b/series.conf
@@ -180,6 +180,9 @@
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
 
+	# Minor fixes from 3.0-3.1-rc4 not included in -stable
+	patches.fixes/mm-swap-token-makes-global-variables-to-function-local.patch
+
         ########################################################
         # IPC patches
         ########################################################
