mm/memory.c: remove ZAP_BLOCK_SIZE (MM fixes 3.0 to 3.1-rc4 not in -stable).

--- a/series.conf
+++ b/series.conf
@@ -183,6 +183,7 @@
 	# Minor fixes from 3.0-3.1-rc4 not included in -stable
 	patches.fixes/mm-swap-token-makes-global-variables-to-function-local.patch
 	patches.fixes/mm-thp-minor-lock-simplification-in-__khugepaged_exit.patch
+	patches.fixes/mm-remove-ZAP_BLOCK_SIZE.patch
 
         ########################################################
         # IPC patches
