--- a/series.conf
+++ b/series.conf
@@ -385,6 +385,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.fixes/drm-radeon-kms-fix-i2c-masks.patch
 
 	########################################################
 	# video4linux
