- Update Xen patches to 3.1-rc9 and c/s 1116.

--- a/series.conf
+++ b/series.conf
@@ -734,6 +734,8 @@
 	patches.xen/xen3-patch-3.0
 	patches.xen/xen3-patch-3.1-rc5
 	patches.xen/xen3-patch-3.1-rc6-rc7
+	patches.xen/xen3-patch-3.1-rc7-rc8
+	patches.xen/xen3-patch-3.1-rc8-rc9
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
@@ -749,7 +751,6 @@
 	patches.xen/xen-pcpu-hotplug
 	patches.xen/xen-mem-hotplug
 	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-pci-multi-segment
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-setup-gsi
 	patches.xen/xen-kzalloc
