drm/radeon/kms: Fix I2C mask definitions (bnc#712023).

--- a/series.conf
+++ b/series.conf
@@ -370,6 +370,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.fixes/drm-radeon-kms-fix-i2c-masks.patch
 
 	########################################################
 	# video4linux
