series.conf: really apply all hv_mouse patches

--- a/series.conf
+++ b/series.conf
@@ -600,6 +600,24 @@
 	patches.suse/staging-hv-staging-next-20111001-0582-Staging-hv-mousevsc-Change-the-allocation-flags-t.patch
 	patches.suse/staging-hv-staging-next-20111001-0583-Staging-hv-mousevsc-Handle-the-case-where-we-may.patch
 	patches.suse/staging-hv-staging-next-20111001-0584-Staging-hv-mousevsc-Correctly-initialize-the-head.patch
+	patches.suse/staging-hv-staging-next-20111001-0585-Staging-hv-mousevsc-Use-completion-primitive-to-s.patch
+	patches.suse/staging-hv-staging-next-20111001-0586-Staging-hv-mousevsc-Cleanup-and-properly-implemen.patch
+	patches.suse/staging-hv-staging-next-20111001-0587-Staging-hv-mousevsc-Get-rid-of-unnecessary-DPRINT.patch
+	patches.suse/staging-hv-staging-next-20111001-0588-Staging-hv-mousevsc-Cleanup-error-handling.patch
+	patches.suse/staging-hv-staging-next-20111001-0589-Staging-hv-mousevsc-Get-rid-of-unnecessary-pr_-c.patch
+	patches.suse/staging-hv-staging-next-20111001-0590-Staging-hv-mousevsc-Free-allocated-memory-in-free.patch
+	patches.suse/staging-hv-staging-next-20111001-0591-Staging-hv-mousevsc-Get-rid-of-the-unused-state.patch
+	patches.suse/staging-hv-staging-next-20111001-0592-Staging-hv-mousevsc-Cleanup-alloc_input_device.patch
+	patches.suse/staging-hv-staging-next-20111001-0593-Staging-hv-mousevsc-Get-rid-of-mousevsc_on_send_c.patch
+	patches.suse/staging-hv-staging-next-20111001-0594-Staging-hv-mousevsc-Cleanup-mousevsc_connect_to_v.patch
+	patches.suse/staging-hv-staging-next-20111001-0595-Staging-hv-mousevsc-Get-rid-of-mousevsc_on_device.patch
+	patches.suse/staging-hv-staging-next-20111001-0596-Staging-hv-mousevsc-Now-cleanup-mousevsc_remove.patch
+	patches.suse/staging-hv-staging-next-20111001-0597-Staging-hv-mousevsc-Get-rid-of-ref_count-state-in.patch
+	patches.suse/staging-hv-staging-next-20111001-0598-Staging-hv-mousevsc-Cleanup-camel-cased-enums.patch
+	patches.suse/staging-hv-staging-next-20111001-0599-Staging-hv-mousevsc-Get-rid-of-mousevsc_on_receiv.patch
+	patches.suse/staging-hv-staging-next-20111001-0600-Staging-hv-mousevsc-Cleanup-mousevsc_on_device_ad.patch
+	patches.suse/staging-hv-staging-next-20111001-0601-Staging-hv-mousevsc-Enable-autoloading-of-the-mou.patch
+	patches.suse/staging-hv-staging-next-20111001-0602-Staging-hv-mousevsc-Get-rid-of-unnecessary-commen.patch
 
 	patches.suse/staging-hv-util-fix-a-bug-in-kvp-implementation.patch
 	patches.suse/staging-hv-util-invoke-cn_netlink_send-in-a-work-context.patch
