rpm/*.spec.in, rpm/mkspec: Generate specfiles according to Factory requirements.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -1,7 +1,7 @@
 #
-# spec file for package kernel-source@VARIANT@ (Version @RPMVERSION@)
+# spec file for package kernel-source@VARIANT@
 #
-# Copyright (c) 2009 SUSE LINUX Products GmbH, Nuernberg, Germany.
+# Copyright (c) @YEAR@ SUSE LINUX Products GmbH, Nuernberg, Germany.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -30,11 +30,7 @@
 Name:           kernel-source@VARIANT@
 Summary:        The Linux Kernel Sources
 Version:        @RPMVERSION@
-%if %using_buildservice
-Release:        @RELEASE_PREFIX@<RELEASE>
-%else
-Release:        @RELEASE_PREFIX@0
-%endif
+Release:        @RELEASE@
 License:        GPL v2 only
 Group:          Development/Sources
 Url:            http://www.kernel.org/
@@ -61,7 +57,7 @@ Source21:       config.conf
 Source23:       supported.conf
 Source33:       check-for-config-changes
 Source34:       check-supported-list
-Source35:	group-source-files.pl
+Source35:       group-source-files.pl
 Source37:       README.SUSE
 Source38:       README.KSYMS
 Source39:       config-options.changes.txt
@@ -107,7 +103,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
 # Source is only complete with devel files.
-Requires:	kernel-devel = %version-%release
+Requires:       kernel-devel = %version-%release
 
 %(chmod +x %_sourcedir/{@SCRIPTS@})
 
@@ -119,22 +115,22 @@ Requires:	kernel-devel = %version-%release
 %description
 Linux kernel sources with many fixes and improvements.
 
-%source_timestamp
 
+%source_timestamp
 %package -n kernel-devel%variant
-Summary:	Development files needed for building kernel modules
-License:	GPL v2 only
-Group:		Development/Sources
-AutoReqProv:	off
-Provides:	multiversion(kernel)
+Summary:        Development files needed for building kernel modules
+License:        GPL v2 only
+Group:          Development/Sources
+AutoReqProv:    off
+Provides:       multiversion(kernel)
 Provides:       kernel-devel%variant = %version-%source_rel
 
 %description -n kernel-devel%variant
 Kernel-level headers and Makefiles required for development of
 external kernel modules.
 
-%source_timestamp
 
+%source_timestamp
 %package vanilla
 Summary:        Vanilla Linux kernel sources with minor build fixes.
 License:        GPL v2 only
@@ -146,8 +142,8 @@ Provides:       %name-vanilla = %version-%source_rel
 %description vanilla
 Vanilla Linux kernel sources with minor build fixes.
 
-%source_timestamp
 
+%source_timestamp
 %prep
 if ! [ -e %_sourcedir/linux-%srcversion.tar.bz2 ]; then
     echo "Please get a copy of linux-%srcversion.tar.bz2 from" \
@@ -168,7 +164,6 @@ tar -xjf %_sourcedir/linux-%srcversion.tar.bz2
 if test "%srcversion" != "%kernelrelease%variant"; then
 	mv linux-%srcversion linux-%kernelrelease%variant
 fi
-
 
 %if %do_vanilla
 %if %vanilla_only
@@ -250,6 +245,7 @@ find %buildroot/usr/src/linux* ! -type l | xargs touch -d "$ts"
 %endif
 
 %if %do_vanilla
+
 %files vanilla
 %defattr(-, root, root)
 /usr/src/linux-%kernelrelease-vanilla
