--- a/rpm/kernel-syms.spec.in
+++ b/rpm/kernel-syms.spec.in
@@ -1,7 +1,7 @@
 #
-# spec file for package kernel-syms@VARIANT@ (Version @RPMVERSION@)
+# spec file for package kernel-syms@VARIANT@
 #
-# Copyright (c) 2009 SUSE LINUX Products GmbH, Nuernberg, Germany.
+# Copyright (c) @YEAR@ SUSE LINUX Products GmbH, Nuernberg, Germany.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -25,7 +25,7 @@ Name:           kernel-syms@VARIANT@
 Summary:        Kernel Symbol Versions (modversions)
 Version:        @RPMVERSION@
 %if %using_buildservice
-Release:        @RELEASE_PREFIX@<RELEASE>
+Release:        @RELEASE@
 %else
 %define kernel_source_release %(LC_ALL=C rpm -q kernel-devel%variant-%version --qf "%{RELEASE}" | grep -v 'not installed' || echo 0)
 Release:        %kernel_source_release
@@ -52,9 +52,10 @@ for the standard kernels.
 This package is needed for compiling kernel module packages with proper
 package dependencies.
 
-%source_timestamp
 
+%source_timestamp
 %prep
+
 %install
 install -m 644 -D %{SOURCE0} %buildroot/%_docdir/%name/README.SUSE
 
