x86: Fix reboot issue for Dell Optiplex 990.

--- a/series.conf
+++ b/series.conf
@@ -221,6 +221,8 @@
 	patches.arch/acpica_fix_wrongly_mapped_acpi_table_header_when_overriding_via_initrd.patch
 	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
+	patches.arch/dell_optiplex_990_fix_reboot.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
