ALSA: hda - Fix ADC input-amp handling for Cx20549 codec.

--- a/series.conf
+++ b/series.conf
@@ -428,6 +428,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
 	patches.drivers/alsa-hda-0002-Keep-EAPD-turned-on-for-old-Conexant-chips
+	patches.drivers/alsa-hda-0003-Fix-ADC-input-amp-handling-for-Cx20549
 
 	########################################################
 	# Char / serial
