--- a/series.conf
+++ b/series.conf
@@ -426,6 +426,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
 
 	########################################################
 	# Char / serial
