--- a/series.conf
+++ b/series.conf
@@ -427,6 +427,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
+	patches.drivers/alsa-hda-0002-Keep-EAPD-turned-on-for-old-Conexant-chips
 
 	########################################################
 	# Char / serial
