- Update Xen patches to 3.1-final and c/s 1123.

--- a/series.conf
+++ b/series.conf
@@ -824,10 +824,7 @@
 	patches.xen/xen3-patch-2.6.38
 	patches.xen/xen3-patch-2.6.39
 	patches.xen/xen3-patch-3.0
-	patches.xen/xen3-patch-3.1-rc5
-	patches.xen/xen3-patch-3.1-rc6-rc7
-	patches.xen/xen3-patch-3.1-rc7-rc8
-	patches.xen/xen3-patch-3.1-rc8-rc9
+	patches.xen/xen3-patch-3.1
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
@@ -845,7 +842,6 @@
 	patches.xen/xen-swiotlb-heuristics
 	patches.xen/xen-configurable-guest-devices
 	patches.xen/xen-setup-gsi
-	patches.xen/xen-kzalloc
 	patches.xen/xen-sections
 	patches.xen/xen-unpriv-build
 	patches.xen/xen-cpufreq-report
@@ -865,7 +861,6 @@
 	patches.xen/xen-netback-kernel-threads
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
-	patches.xen/xen-floppy
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-no-lapic
@@ -880,3 +875,4 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-unmapped-initrd
+-	patches.xen/xencons-tty_mutex.patch
