--- a/series.conf
+++ b/series.conf
@@ -437,6 +437,9 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
+	patches.drivers/alsa-hda-0002-Keep-EAPD-turned-on-for-old-Conexant-chips
+	patches.drivers/alsa-hda-0003-Fix-ADC-input-amp-handling-for-Cx20549
 
 	########################################################
 	# Char / serial
@@ -875,4 +878,4 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-unmapped-initrd
--	patches.xen/xencons-tty_mutex.patch
+	patches.xen/xencons-tty_mutex.patch
