- Re-disabled patches.xen/xencons-tty_mutex.patch

--- a/series.conf
+++ b/series.conf
@@ -878,4 +878,4 @@
 	patches.xen/xen-x86_64-dump-user-pgt
 	patches.xen/xen-x86_64-note-init-p2m
 	patches.xen/xen-x86_64-unmapped-initrd
-	patches.xen/xencons-tty_mutex.patch
+-	patches.xen/xencons-tty_mutex.patch
