ALSA: hda/realtek - Skip invalid digital out pins (bnc#727348).

--- a/series.conf
+++ b/series.conf
@@ -441,6 +441,7 @@
 	patches.drivers/alsa-hda-0002-Keep-EAPD-turned-on-for-old-Conexant-chips
 	patches.drivers/alsa-hda-0003-Fix-ADC-input-amp-handling-for-Cx20549
 	patches.drivers/alsa-hda-0004-Add-missing-static-ADC-tables-for-ALC269-qu
+	patches.drivers/alsa-hda-0005-realtek-Skip-invalid-digital-out-pins
 
 	########################################################
 	# Char / serial
