--- a/series.conf
+++ b/series.conf
@@ -222,6 +222,7 @@
 	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
 	patches.arch/dell_optiplex_990_fix_reboot.patch
+	patches.arch/dell_latitude_e6xxx_e5xxx__fix_reboot.patch
 
 	########################################################
 	# CPUFREQ
