--- a/series.conf
+++ b/series.conf
@@ -255,6 +255,7 @@
 
 +needs_update37	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfs-adaptive-readdir-plus
+	patches.fixes/nfs-connect-timeout
 
 	########################################################
 	# lockd + statd
