--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.1.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -375,7 +376,6 @@
 	########################################################
 	# DRM/Video
 	########################################################
-	patches.fixes/drm-radeon-kms-fix-i2c-masks.patch
 
 	########################################################
 	# video4linux
@@ -441,10 +441,6 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0001-realtek-Fix-missing-volume-controls-with-ALC260
-	patches.drivers/alsa-hda-0002-Keep-EAPD-turned-on-for-old-Conexant-chips
-	patches.drivers/alsa-hda-0003-Fix-ADC-input-amp-handling-for-Cx20549
-	patches.drivers/alsa-hda-0004-Add-missing-static-ADC-tables-for-ALC269-qu
-	patches.drivers/alsa-hda-0005-realtek-Skip-invalid-digital-out-pins
 
 	########################################################
 	# Char / serial
@@ -578,7 +574,6 @@
 	patches.suse/staging-hv-staging-next-20111001-0055-staging-hv-remove-unnecessary-includes-in-netvsc.patch
 	patches.suse/staging-hv-staging-next-20111001-0056-staging-hv-add-newline-to-log-messages-in-netvsc.patch
 	patches.suse/staging-hv-staging-next-20111001-0057-staging-hv-convert-dev_-loglevel-to-netdev_-logle.patch
-	patches.suse/staging-hv-staging-next-20111001-0058-staging-hv-fix-a-kernel-warning-in-netvsc_linkstat.patch
 	patches.suse/staging-hv-staging-next-20111001-0059-staging-hv-re-order-the-code-in-netvsc_probe.patch
 	patches.suse/staging-hv-staging-next-20111001-0060-staging-hv-fix-counting-of-outstanding-sends-in-f.patch
 	patches.suse/staging-hv-staging-next-20111001-0061-staging-hv-fix-counting-of-available-buffer-slots.patch
@@ -587,7 +582,6 @@
 	patches.suse/staging-hv-staging-next-20111001-0064-staging-hv-fix-some-typos-in-netvsc.c.patch
 	patches.suse/staging-hv-staging-next-20111001-0065-Staging-hv-Update-TODO-file.patch
 	patches.suse/staging-hv-staging-next-20111001-0066-Staging-hv-vmbus-Show-the-modalias-in-sys-bus-vm.patch
-	patches.suse/staging-hv-staging-next-20111001-0129-Staging-hv-Add-support-for-2-TB-LUN-in-storage-dr.patch
 	patches.suse/staging-hv-staging-next-20111001-0243-Staging-hv-vmbus-Rename-vmbus_child_device_create.patch
 	patches.suse/staging-hv-staging-next-20111001-0244-Staging-hv-vmbus-Rename-vmbus_child_device_regist.patch
 	patches.suse/staging-hv-staging-next-20111001-0245-Staging-hv-vmbus-Rename-vmbus_child_device_unregi.patch
