initial armv7l default kernel config, everything enable except the non compiling modules

--- a/config.conf
+++ b/config.conf
@@ -40,6 +40,9 @@
 # maybe the kernels above were patched to death?
 +ppc		ppc/vanilla
 
+# ARM architectures
++armv7l         armv7l/default
+
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
 # Up to now, the openSuSE 11.1 ppc media can not have a 
