Add ARM support for iMX51, OMAP2plus & Tegra SoC

--- a/config.conf
+++ b/config.conf
@@ -42,6 +42,9 @@
 
 # ARM architectures
 +armv7l         armv7l/default
++armv7l         armv7l/imx51
++armv7l         armv7l/omap2plus
++armv7l         armv7l/tegra
 
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
