- add as102 dvb-t driver to staging - staging: as102: Initial import from Abilis. - staging: as102: Fix CodingStyle errors in file as102_drv.c. - staging: as102: Fix CodingStyle errors in file as102_fw.c. - staging: as102: Fix CodingStyle errors in file as10x_cmd.c. - staging: as102: Fix CodingStyle errors in file   as10x_cmd_stream.c. - staging: as102: Fix CodingStyle errors in file as102_fe.c. - staging: as102: Fix CodingStyle errors in file as102_usb_drv.c. - staging: as102: Fix CodingStyle errors in file as10x_cmd_cfg.c. - staging: as102: Add Elgato EyeTV DTT Deluxe. - staging: as102: Properly handle multiple product names. - staging: as102: Fix licensing oversight. - staging: as102: Remove non-linux headers inclusion. - staging: as102: Convert the comments to kernel-doc style. - staging: as102: Enable compilation. - staging: as102: Add nBox Tuner Dongle support. - staging: as102: Unconditionally compile code dependent on   DVB_CORE. - staging: as102: Remove conditional compilation based on   kernel version. - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,23 @@
 	########################################################
 	# video4linux
 	########################################################
+	patches.drivers/0001-media-staging-as102-Initial-import-from-Abilis.patch
+	patches.drivers/0002-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0003-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0004-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0005-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0006-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0007-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0008-media-staging-as102-Fix-CodingStyle-errors-in-file-a.patch
+	patches.drivers/0009-media-staging-as102-Add-Elgato-EyeTV-DTT-Deluxe.patch
+	patches.drivers/0010-media-staging-as102-Properly-handle-multiple-product.patch
+	patches.drivers/0011-media-staging-as102-Fix-licensing-oversight.patch
+	patches.drivers/0012-media-staging-as102-Remove-non-linux-headers-inclusi.patch
+	patches.drivers/0013-media-staging-as102-Convert-the-comments-to-kernel-d.patch
+	patches.drivers/0014-media-staging-as102-Enable-compilation.patch
+	patches.drivers/0015-media-staging-as102-Add-nBox-Tuner-Dongle-support.patch
+	patches.drivers/0016-media-staging-as102-Unconditionally-compile-code-dep.patch
+	patches.drivers/0017-media-staging-as102-Remove-conditional-compilation-b.patch
 
 	########################################################
 	# Network
