- dm-raid45: split region hash and log, used by mirror and raid45. - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -453,6 +453,7 @@
 	patches.suse/dm-raid45-api-update-no-barriers
 	patches.suse/dm-raid45-api-2.6.39
 	patches.suse/dm-raid45-api-3.0
+	patches.suse/dm-raid45-split-dependencies
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
 	patches.suse/dm-mpath-accept-failed-paths
