ARM: Use zImage, not vmlinux
On ARM we use the arch/arm/boot/zImage file similar to x86 to boot systems.
Put that into the rpm as vmlinuz instead of the vmlinux ELF binary.

Signed-off-by: Alexander Graf <agraf@suse.de>

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -423,6 +423,12 @@ add_vmlinux()
     cp -p arch/sparc/boot/$image %buildroot/boot/vmlinuz-%kernelrelease-%build_flavor
     image=vmlinux
 %endif
+%ifarch %arm
+    add_vmlinux --compressed
+    image=zImage
+    cp -p arch/arm/boot/$image %buildroot/boot/vmlinuz-%kernelrelease-%build_flavor
+    image=vmlinuz
+%endif
 
 # end of build_kdump
 %endif
