ARM: Fix compile breakage for generic kernel.

--- a/series.conf
+++ b/series.conf
@@ -153,6 +153,11 @@
         # PS3
         ########################################################
 
+        ########################################################
+        # ARM
+        ########################################################
+	patches.arch/arm-phys-offset.patch
+
 	########################################################
 	# S/390
 	########################################################
