--- a/series.conf
+++ b/series.conf
@@ -377,6 +377,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.fixes/drm-radeon-kms-fix-up-gpio-i2c-mask-bits-for-r4xx.patch
 
 	########################################################
 	# video4linux
