ARM: create uImage, not zImage, so we can boot with u-boot

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -97,6 +97,9 @@ BuildRequires:  python
 BuildRequires:  dwarfextract
 %endif
 %endif
+%ifarch %arm
+BuildRequires:  u-boot-tools
+%endif
 %if %build_xen
 %ifarch %ix86
 %if %build_flavor != "ec2"
@@ -410,9 +413,10 @@ add_vmlinux()
 %endif
 %ifarch %arm
     add_vmlinux --compressed
-    image=zImage
-    cp -p arch/arm/boot/$image %buildroot/boot/vmlinuz-%kernelrelease-%build_flavor
-    image=vmlinuz
+    # quickly compile uImage so we have something to boot from
+    make %{?_smp_mflags} uImage $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
+    image=uImage
+    cp -p arch/arm/boot/$image %buildroot/boot/uImage-%kernelrelease-%build_flavor
 %endif
 
 # end of build_kdump
