- rpm/try-disable-staging-driver: Script to disable failing staging   driver and restart make.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -297,7 +297,18 @@ fi
     MAKE_ARGS="$MAKE_ARGS D=2"
 %endif
 
-make %{?_smp_mflags} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
+while true; do
+    make %{?_smp_mflags} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y 2>&1 \
+        | tee buildlog
+    if test "${PIPESTATUS[0]}" -eq 0; then
+        break
+    fi
+    if %_sourcedir/try-disable-staging-driver buildlog; then
+        echo "Retrying make"
+    else
+        exit 1
+    fi
+done
 
 %install
 
