--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -83,6 +83,7 @@ Source65:       kernel-spec-macros
 Source66:       configtool.pl
 Source67:       log.sh
 Source68:       host-memcpy-hack.h
+Source69:       try-disable-staging-driver
 Source100:      config.tar.bz2
 Source101:      config.addon.tar.bz2
 Source102:      patches.arch.tar.bz2
