intel_idle: Fix kvm -cpu host Null pointer enter function issue (bnc#726296).

--- a/series.conf
+++ b/series.conf
@@ -238,6 +238,7 @@
 
 	patches.fixes/intel_idle_lapic_param.patch
 	patches.fixes/intel_idle_add_flush_tlb_param.patch
+	patches.fixes/intel_idle_fix_mwait_leave_zero_kvm_issue.patch
 
 	########################################################
 	# AGP, graphics related stuff
