rpm/kernel-binary.spec.in: Ignore staging failures only in vanilla only branches.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -20,6 +20,7 @@
 %define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
+%define vanilla_only @VANILLA_ONLY@
 
 %include %_sourcedir/kernel-spec-macros
 
@@ -303,7 +304,10 @@ while true; do
     if test "${PIPESTATUS[0]}" -eq 0; then
         break
     fi
-    if %_sourcedir/try-disable-staging-driver buildlog; then
+    # In the linux-next and vanilla branches, we try harder to build a
+    # package.
+    if test 0%vanilla_only -gt 0 &&
+			%_sourcedir/try-disable-staging-driver buildlog; then
         echo "Retrying make"
     else
         exit 1
