--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-3.1.1
 	patches.kernel.org/patch-3.1.1-2
 	patches.kernel.org/patch-3.1.2-3
+	patches.kernel.org/patch-3.1.3-4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
