--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -694,6 +694,7 @@ Group:          System/Kernel
 Url:            http://www.kernel.org/
 Provides:       multiversion(kernel)
 Provides:       kernel-base = %version-%source_rel
+Conflicts:      %name-base = %version-%release
 Requires(pre):  coreutils awk
 Requires(post): module-init-tools
 Requires(post): perl-Bootloader
