Fix typo: Base package should not conflict with itself but with main package.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -694,7 +694,7 @@ Group:          System/Kernel
 Url:            http://www.kernel.org/
 Provides:       multiversion(kernel)
 Provides:       kernel-base = %version-%source_rel
-Conflicts:      %name-base = %version-%release
+Conflicts:      %name = %version-%release
 Requires(pre):  coreutils awk
 Requires(post): module-init-tools
 Requires(post): perl-Bootloader
