Use GPL-2.0 as license tag (from http://spdx.org/licenses/) Only have one licenses line per file, the rest was just duplicated.

--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -29,7 +29,7 @@ Release:        @RELEASE@
 BuildRequires:  docbook-toys docbook-utils ghostscript_any libjpeg-devel texlive transfig xmlto xorg-x11-devel
 BuildRequires:  kernel-source%variant
 Url:            http://www.kernel.org/
-License:        GPL v2 or later
+License:        GPL-2.0
 Group:          Documentation/Man
 Provides:       %name = %version-%source_rel
 BuildArch:      noarch
