--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -31,7 +31,7 @@ Name:           kernel-source@VARIANT@
 Summary:        The Linux Kernel Sources
 Version:        @RPMVERSION@
 Release:        @RELEASE@
-License:        GPL v2 only
+License:        GPL-2.0
 Group:          Development/Sources
 Url:            http://www.kernel.org/
 AutoReqProv:    off
@@ -120,7 +120,6 @@ Linux kernel sources with many fixes and improvements.
 %source_timestamp
 %package -n kernel-devel%variant
 Summary:        Development files needed for building kernel modules
-License:        GPL v2 only
 Group:          Development/Sources
 AutoReqProv:    off
 Provides:       multiversion(kernel)
@@ -134,7 +133,6 @@ external kernel modules.
 %source_timestamp
 %package vanilla
 Summary:        Vanilla Linux kernel sources with minor build fixes.
-License:        GPL v2 only
 Group:          Development/Sources
 AutoReqProv:    off
 Provides:       multiversion(kernel)
