--- a/rpm/kernel-syms.spec.in
+++ b/rpm/kernel-syms.spec.in
@@ -30,7 +30,7 @@ Release:        @RELEASE@
 %define kernel_source_release %(LC_ALL=C rpm -q kernel-devel%variant-%version --qf "%{RELEASE}" | grep -v 'not installed' || echo 0)
 Release:        %kernel_source_release
 %endif
-License:        GPL v2 only
+License:        GPL-2.0
 Group:          Development/Sources
 Url:            http://www.kernel.org/
 AutoReqProv:    off
