rpm/kernel-binary.spec.in: Do not package the vmlinux image in the devel package.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -620,8 +620,7 @@ add_dirs_to_filelist() {
 # Collect the file lists.
 shopt -s nullglob
 > %my_builddir/kernel-devel.files
-for file in %buildroot/boot/vmlinux-*.gz %buildroot/boot/symtypes* \
-				%buildroot/lib/modules/*/{build,source}; do
+for file in %buildroot/boot/symtypes* %buildroot/lib/modules/*/{build,source}; do
 	f=${file##%buildroot}
 	echo "$f" >> %my_builddir/kernel-devel.files
 done
