Use versioned provides/obsoletes.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -111,8 +111,8 @@ Obsoletes:      kernel-xenpae <= %version
 #!BuildIgnore:  xen
 %endif
 
-Provides:       %name-nongpl
-Obsoletes:      %name-nongpl
+Provides:       %name-nongpl = %version
+Obsoletes:      %name-nongpl <= %version
 %if %build_vanilla
 # force bzip2 instead of lzma compression to allow install on older dist versions
 %define _binary_payload w9.bzdio
