No self-obsoletions.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -105,14 +105,14 @@ BuildRequires:  u-boot-tools
 %ifarch %ix86
 %if %build_flavor != "ec2"
 Provides:       kernel-xenpae = %version
-Obsoletes:      kernel-xenpae <= %version
+Obsoletes:      kernel-xenpae < %version
 %endif
 %endif
 #!BuildIgnore:  xen
 %endif
 
 Provides:       %name-nongpl = %version
-Obsoletes:      %name-nongpl <= %version
+Obsoletes:      %name-nongpl < %version
 %if %build_vanilla
 # force bzip2 instead of lzma compression to allow install on older dist versions
 %define _binary_payload w9.bzdio
