--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-3.1.1-2
 	patches.kernel.org/patch-3.1.2-3
 	patches.kernel.org/patch-3.1.3-4
+	patches.kernel.org/patch-3.1.4-5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -382,7 +383,6 @@
 	########################################################
 	# DRM/Video
 	########################################################
-	patches.fixes/drm-radeon-kms-fix-up-gpio-i2c-mask-bits-for-r4xx.patch
 
 	########################################################
 	# video4linux
