x86, x2apic: Enable the bios request for x2apic optout.

--- a/series.conf
+++ b/series.conf
@@ -231,6 +231,8 @@
 	patches.arch/dell_optiplex_990_fix_reboot.patch
 	patches.arch/dell_latitude_e6xxx_e5xxx__fix_reboot.patch
 
+	patches.arch/x2apic_opt_out.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
