- Revert "USB: fix ehci alignment error". - kabi/severities: Check drivers/usb again

--- a/series.conf
+++ b/series.conf
@@ -45,6 +45,7 @@
         # kABI consistency patches
         ########################################################
 	patches.kabi/jiffies_to_clock_t-kABI_guard.patch
+	patches.kabi/revert-USB-fix-ehci-alignment-error
 
 	########################################################
 	#
