Silence missing defattr warning.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -680,11 +680,12 @@ rm %my_builddir/tmp
 %if %split_base
 
 %files -f kernel-main.files
+%defattr(-, root, root)
 %else
 
 %files -f kernel-base.files
-%endif
 %defattr(-, root, root)
+%endif
 
 %package base
 Summary:        @SUMMARY@ - base modules
