--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -41,7 +41,7 @@ Requires(post): coreutils sed
 Provides:       multiversion(kernel)
 Provides:       linux
 Provides:       %name = %version-%source_rel
-Source0:        http://www.kernel.org/pub/linux/kernel/v2.6/linux-%srcversion.tar.bz2
+Source0:        http://www.kernel.org/@FTP_DIRECTORY@/linux-%srcversion.tar.bz2
 Source2:        source-post.sh
 Source3:        kernel-source.rpmlintrc
 Source8:        devel-pre.sh
