- rpm/kernel-source.spec.in, rpm/mkspec: Fix tarball URL for -rcX and   do not generate any URL for linux-next and vanilla snapshots.

--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -41,7 +41,7 @@ Requires(post): coreutils sed
 Provides:       multiversion(kernel)
 Provides:       linux
 Provides:       %name = %version-%source_rel
-Source0:        http://www.kernel.org/@FTP_DIRECTORY@/linux-%srcversion.tar.bz2
+Source0:        @TARBALL_URL@linux-%srcversion.tar.bz2
 Source2:        source-post.sh
 Source3:        kernel-source.rpmlintrc
 Source8:        devel-pre.sh
