Btrfs: fix a potential btrfs_bio leak on scrub fixups (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -399,6 +399,7 @@
         patches.suse/btrfs-0217-fix-extent_buffer-leak-in-the-metadata-IO-erro.patch
         patches.suse/btrfs-0218-stop-the-readahead-threads-on-failed-mount.patch
         patches.suse/btrfs-0219-stop-leaking-btrfs_bios-on-readahead.patch
+        patches.suse/btrfs-0221-fix-a-potential-btrfs_bio-leak-on-scrub-fixups.patch
 
 	# josef's tree
 
