btrfs scrub: bugfix: mirror_num off by one (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -385,6 +385,7 @@
         patches.suse/btrfs-0203-added-helper-functions-to-iterate-backrefs.patch
         patches.suse/btrfs-0204-scrub-added-unverified_errors.patch
         patches.suse/btrfs-0205-scrub-print-paths-of-corrupted-files.patch
+        patches.suse/btrfs-0206-scrub-bugfix-mirror_num-off-by-one.patch
 
 	# josef's tree
 
