btrfs: return EINVAL if start > total_bytes in fitrim ioctl (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -351,6 +351,7 @@
         patches.suse/btrfs-0169-fix-wrong-max_to_defrag-in-btrfs_defrag_file.patch
         patches.suse/btrfs-0170-trivial-fix-a-potential-memory-leak-in-btrfs_p.patch
         patches.suse/btrfs-0171-honor-extent-thresh-during-defragmentation.patch
+        patches.suse/btrfs-0172-return-EINVAL-if-start-total_bytes-in-fitrim-i.patch
 
 	# josef's tree
 
