Btrfs: remove BUG_ON() in compress_file_range() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -353,6 +353,7 @@
         patches.suse/btrfs-0171-honor-extent-thresh-during-defragmentation.patch
         patches.suse/btrfs-0172-return-EINVAL-if-start-total_bytes-in-fitrim-i.patch
         patches.suse/btrfs-0173-fix-array-bound-checking.patch
+        patches.suse/btrfs-0174-remove-BUG_ON-in-compress_file_range.patch
 
 	# josef's tree
 
