Btrfs: avoid null dereference and leaks when bailing from open_ctree() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -407,6 +407,7 @@
         patches.suse/btrfs-0226-fix-our-reservations-for-updating-an-inode-whe.patch
         patches.suse/btrfs-0227-fix-memory-leak-in-btrfs_parse_early_options.patch
         patches.suse/btrfs-0228-fix-subvol_name-leak-on-error-in-btrfs_mount.patch
+        patches.suse/btrfs-0229-avoid-null-dereference-and-leaks-when-bailing-.patch
 
 	# josef's tree
 
