Btrfs: allow callers to specify if flushing can occur for btrfs_block_rsv_check (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -306,6 +306,7 @@
         patches.suse/btrfs-0124-kill-btrfs_truncate_reserve_metadata.patch
         patches.suse/btrfs-0125-only-reserve-space-in-fallocate-if-we-have-to-.patch
         patches.suse/btrfs-0126-reduce-the-amount-of-space-needed-for-truncate.patch
+        patches.suse/btrfs-0127-allow-callers-to-specify-if-flushing-can-occur.patch
 
 	# josef's tree
 
