--- a/series.conf
+++ b/series.conf
@@ -338,6 +338,7 @@
         patches.suse/btrfs-0156-fix-regression-in-re-setting-a-large-xattr.patch
         patches.suse/btrfs-0157-don-t-check-bytes_pinned-to-determine-if-we-sh.patch
         patches.suse/btrfs-0158-wait-for-ordered-extents-if-we-re-in-trouble-w.patch
+        patches.suse/btrfs-0159-allow-shrink_delalloc-flush-the-needed-reclaim.patch
 
 	# josef's tree
 
