--- a/series.conf
+++ b/series.conf
@@ -335,6 +335,7 @@
         patches.suse/btrfs-0153-inline-checksums-into-the-disk-free-space-cach.patch
         patches.suse/btrfs-0154-wait-for-ordered-extents-if-we-didn-t-reclaim-.patch
         patches.suse/btrfs-0155-fix-the-amount-of-space-reserved-for-unlink.patch
+        patches.suse/btrfs-0156-fix-regression-in-re-setting-a-large-xattr.patch
 
 	# josef's tree
 
