Btrfs: fix no reserved space for writing out inode cache (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -412,6 +412,7 @@
         patches.suse/btrfs-0231-rework-error-handling-in-btrfs_mount.patch
         patches.suse/btrfs-0232-tweak-the-delayed-inode-reservations-again.patch
         patches.suse/btrfs-0233-fix-nocow-when-deleting-the-item.patch
+        patches.suse/btrfs-0234-fix-no-reserved-space-for-writing-out-inode-ca.patch
 
 	# josef's tree
 
