--- a/series.conf
+++ b/series.conf
@@ -303,6 +303,7 @@
         patches.suse/btrfs-0121-kill-unused-parts-of-block_rsv.patch
         patches.suse/btrfs-0122-don-t-try-to-commit-in-btrfs_block_rsv_check.patch
         patches.suse/btrfs-0123-optimize-how-we-account-for-space-in-truncate.patch
+        patches.suse/btrfs-0124-kill-btrfs_truncate_reserve_metadata.patch
 
 	# josef's tree
 
