Btrfs: add a io_ctl struct and helpers for dealing with the space cache (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -329,6 +329,7 @@
         patches.suse/btrfs-0147-only-inherit-btrfs-specific-flags-when-creatin.patch
         patches.suse/btrfs-0148-introduce-mount-option-no_space_cache.patch
         patches.suse/btrfs-0149-don-t-skip-writing-out-a-empty-block-groups-ca.patch
+        patches.suse/btrfs-0150-add-a-io_ctl-struct-and-helpers-for-dealing-wi.patch
 
 	# josef's tree
 
