--- a/series.conf
+++ b/series.conf
@@ -404,6 +404,7 @@
         patches.suse/btrfs-0223-check-for-a-null-fs-root-when-writing-to-the-b.patch
         patches.suse/btrfs-0224-fix-double-free-tree_root-in-btrfs_mount.patch
         patches.suse/btrfs-0225-fix-oops-on-NULL-trans-handle-in-btrfs_truncat.patch
+        patches.suse/btrfs-0226-fix-our-reservations-for-updating-an-inode-whe.patch
 
 	# josef's tree
 
