Btrfs: if we have a lot of pinned space, commit the transaction (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -342,6 +342,7 @@
         patches.suse/btrfs-0160-release-trans-metadata-bytes-before-flushing-d.patch
         patches.suse/btrfs-0161-reserve-some-space-for-an-orphan-item-when-unl.patch
         patches.suse/btrfs-0162-seperate-out-btrfs_block_rsv_check-out-into-2-.patch
+        patches.suse/btrfs-0163-if-we-have-a-lot-of-pinned-space-commit-the-tr.patch
 
 	# josef's tree
 
