--- a/series.conf
+++ b/series.conf
@@ -424,6 +424,7 @@
         patches.suse/btrfs-0243-fix-barrier-flushes.patch
         patches.suse/btrfs-0244-Fix-up-32-64-bit-compatibility-for-new-ioctls.patch
         patches.suse/btrfs-0245-mirror_num-should-be-int-not-u64.patch
+        patches.suse/btrfs-0246-fix-to-search-one-more-bitmap-for-cluster-setu.patch
 
 	# josef's tree
 
