Btrfs: fix tree corruption after multi-thread snapshots and inode_cache flush (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -420,6 +420,7 @@
         patches.suse/btrfs-0239-fix-deadlock-caused-by-the-race-between-reloca.patch
 	patches.suse/btrfs-0240-handle-bio_add_page-failure-gracefully-in-scru.patch
 	patches.suse/btrfs-0241-rename-the-option-to-nospace_cache.patch
+	patches.suse/btrfs-0242-fix-tree-corruption-after-multi-thread-snapsho.patch
 
 	# josef's tree
 
