--- a/series.conf
+++ b/series.conf
@@ -444,6 +444,7 @@
         patches.suse/btrfs-0264-fix-meta-data-raid-repair-merge-problem.patch
         patches.suse/btrfs-0265-try-to-allocate-from-cluster-even-at-LOOP_NO_E.patch
         patches.suse/btrfs-0266-try-cluster-but-don-t-advance-in-search-list.patch
+        patches.suse/btrfs-0267-check-if-the-to-be-added-device-is-writable.patch
 
 	# josef's tree
 
