--- a/series.conf
+++ b/series.conf
@@ -364,6 +364,7 @@
         patches.suse/btrfs-0182-close-all-bdevs-on-mount-failure.patch
         patches.suse/btrfs-0183-do-not-allow-mounting-non-subvolumes-via-subvo.patch
         patches.suse/btrfs-0184-ratelimit-WARN_ON-in-use_block_rsv.patch
+        patches.suse/btrfs-0185-don-t-wait-as-long-for-more-batches-during-SSD.patch
 
 	# josef's tree
 
