Btrfs: fix oops when calling statfs on readonly device (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -435,6 +435,7 @@
         patches.suse/btrfs-0254-scrub-handle-ENOMEM-from-init_ipath.patch
         patches.suse/btrfs-0256-fix-deadlock-on-metadata-reservation-when-evic.patch
         patches.suse/btrfs-0257-Don-t-error-on-resizing-FS-to-same-size.patch
+        patches.suse/btrfs-0258-fix-oops-when-calling-statfs-on-readonly-devic.patch
 
 	# josef's tree
 
