--- a/series.conf
+++ b/series.conf
@@ -317,6 +317,7 @@
         patches.suse/btrfs-0135-don-t-get-the-block_rsv-in-btrfs_free_tree_blo.patch
         patches.suse/btrfs-0136-stop-passing-a-trans-handle-all-around-the-res.patch
         patches.suse/btrfs-0137-make-sure-to-unset-trans-block_rsv-before-runn.patch
+        patches.suse/btrfs-0138-delay-iput-when-deleting-a-block-group.patch
 
 	# josef's tree
 
