Btrfs: reset cluster's max_size when creating bitmap (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -437,6 +437,7 @@
         patches.suse/btrfs-0257-Don-t-error-on-resizing-FS-to-same-size.patch
         patches.suse/btrfs-0258-fix-oops-when-calling-statfs-on-readonly-devic.patch
         patches.suse/btrfs-0259-initialize-new-bitmaps-list.patch
+        patches.suse/btrfs-0260-reset-cluster-s-max_size-when-creating-bitmap.patch
 
 	# josef's tree
 
