--- a/series.conf
+++ b/series.conf
@@ -382,6 +382,7 @@
         patches.suse/btrfs-0200-initial-readahead-code-and-prototypes.patch
         patches.suse/btrfs-0201-hooks-for-readahead.patch
         patches.suse/btrfs-0202-use-readahead-API-for-scrub.patch
+        patches.suse/btrfs-0203-added-helper-functions-to-iterate-backrefs.patch
 
 	# josef's tree
 
