--- a/series.conf
+++ b/series.conf
@@ -408,6 +408,7 @@
         patches.suse/btrfs-0227-fix-memory-leak-in-btrfs_parse_early_options.patch
         patches.suse/btrfs-0228-fix-subvol_name-leak-on-error-in-btrfs_mount.patch
         patches.suse/btrfs-0229-avoid-null-dereference-and-leaks-when-bailing-.patch
+        patches.suse/btrfs-0230-close-devices-on-all-error-paths-in-open_ctree.patch
 
 	# josef's tree
 
