btrfs: Moved repair code from inode.c to extent_io.c (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -393,6 +393,7 @@
         patches.suse/btrfs-0211-btrfs_multi_bio-replaced-with-btrfs_bio.patch
         patches.suse/btrfs-0212-Do-not-use-bio-bi_bdev-after-submission.patch
         patches.suse/btrfs-0213-Put-mirror_num-in-bi_bdev.patch
+        patches.suse/btrfs-0214-Moved-repair-code-from-inode.c-to-extent_io.c.patch
 
 	# josef's tree
 
