--- a/series.conf
+++ b/series.conf
@@ -377,6 +377,7 @@
         patches.suse/btrfs-0195-ClearPageError-during-writepage-and-clean_tree.patch
         patches.suse/btrfs-0196-fix-delayed-insertion-reservation.patch
         patches.suse/btrfs-0197-add-an-extra-wait-mode-to-read_extent_buffer_p.patch
+        patches.suse/btrfs-0198-add-READAHEAD-extent-buffer-flag.patch
 
 	# josef's tree
 
