Btrfs: do not set EXTENT_DIRTY along with EXTENT_DELALLOC (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -355,6 +355,7 @@
         patches.suse/btrfs-0173-fix-array-bound-checking.patch
         patches.suse/btrfs-0174-remove-BUG_ON-in-compress_file_range.patch
         patches.suse/btrfs-0175-fix-direct-io-vs-nodatacow.patch
+        patches.suse/btrfs-0176-do-not-set-EXTENT_DIRTY-along-with-EXTENT_DELA.patch
 
 	# josef's tree
 
