Btrfs: rewrite btrfs_trim_block_group() (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -459,6 +459,7 @@
 	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
 
 	# patches collected from mailinglist
+        patches.suse/btrfs-8001-rewrite-btrfs_trim_block_group.patch
 
 	# Workaround for bnc#672923. Will be removed once we come up
 	# with something that can go upstream.
