btrfs: fix double-free 'tree_root' in 'btrfs_mount()' (FATE#306586).

--- a/series.conf
+++ b/series.conf
@@ -402,6 +402,7 @@
         patches.suse/btrfs-0221-fix-a-potential-btrfs_bio-leak-on-scrub-fixups.patch
         patches.suse/btrfs-0222-fix-race-during-transaction-joins.patch
         patches.suse/btrfs-0223-check-for-a-null-fs-root-when-writing-to-the-b.patch
+        patches.suse/btrfs-0224-fix-double-free-tree_root-in-btrfs_mount.patch
 
 	# josef's tree
 
